# TerminalVeil

./: .gitignore  BUILD.md  Dockerfile  LICENSE  PRIVACY_POLICY.md  README.md  app.py  app_sync.py  build_ios.sh  pyproject.toml  render.yaml  requirements.txt  run.sh  run_web.sh  terminalveil.pdy
assets/: README.md
docs/: QR_CODES.md  SCREENSHOTS_GUIDE.md
iOS/: main.py
itchio/: SIGNUP_GUIDE.md  index.html  itchio_page.md
itchio_upload/: index.html
resources/: README.txt
templates/: index.html
terminalveil/: __init__.py  __main__.py  analytics.py  camera_handler.py  ios_camera_handler.py  ios_main.py  main.py  main_async.py  puzzles.py  save_manager.py  terminal.py
